# eclipse

./: .gitignore  Makefile  README.md  term_test.py
agent/: CMakeLists.txt
agent/src/: CMakeLists.txt  ansi.h  logging.h  main.c  meta.h.in  os_util.c
agent/src/io/: file_util.c  file_util.h
agent/src/net/: CMakeLists.txt  netcomm.c  netcomm.h
controller/: __main__.py
controller/interface/: __init__.py  structs.py
controller/interface/components/: __init__.py  base.py  options.py  text.py
controller/interface/menus/: connections.py  main.py
controller/interface/panels/: __init__.py  alert.py  background.py  control.py  options.py  text.py  util.py
controller/logging/: __init__.py
controller/networking/: connection.py  listener.py
controller/term/: __init__.py  color.py  input.py  style.py
controller/types/: __init__.py
inc/: logging.h  os_util.h  sig_util.h
inc/net/: netcomm.h
src/: main.c  sig_util.c
src/io/: file_util.h
src/net/: netcomm.c
